<resources>
    <string name="app_name">Code Challenge 1</string>
    <string name="this_is_a_button">THIS IS A BUTTON</string>
    <string name="this_is_a_green_button">THIS IS A GREEN BUTTON</string>
    <string name="android_developer_fundamentals">Android Developer Fundamentals</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
</resources>
